# la_fires2

./: .gitignore  00_preprocess_mswep.py  00_preprocess_mswx.py  01_concatenate_preprocessed_files.py  02_select_data.py  03_calculate_temporal_window_mean.py  04_identify_dry_wet_seasons.py  05_extract_dry_wet_seasons.py  06_scale_precipitation.py  07_create_experiment.py  config.py  ioutils.py  plot_experiment_precip.py  pyproject.toml  utils.py
