[project]
name = "la-fires2"
version = "0.1.0"
description = "Create input files for BEPS for la_fire experiment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numpy>=2.4.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
